--- a/server/plugins/Essentials/upgrades-done.yml
+++ b/server/plugins/Essentials/upgrades-done.yml
@@ -2,3 +2,6 @@ newUidCacheBuilt: true
 updateSpawnsToNewSpawnsConfig: true
 updateJailsToNewJailsConfig: true
 warnMetrics: true
+movemotdToFile: true
+moverulesToFile: true
+deleteOldItemsCsv: true
