--- a/server/plugins/Essentials/upgrades-done.yml
+++ b/server/plugins/Essentials/upgrades-done.yml
@@ -5,3 +5,11 @@ warnMetrics: true
 movemotdToFile: true
 moverulesToFile: true
 deleteOldItemsCsv: true
+sanitizeAllUserFilenames: true
+updateUsersPowerToolsFormat: true
+updateUsersHomesFormat: true
+banFormatChange: true
+updateUsersIgnoreListUUID: true
+updateUsersStupidLegacyPathNames: true
+updateUsersMailList: true
+updatePurgeBrokenNpcAccounts: true
