--- a/server/plugins/TAB/animations.yml
+++ b/server/plugins/TAB/animations.yml
@@ -1,110 +1,34 @@
-MyAnimation1:
-  change-interval: 100
-  texts:
-    - '&d-&3--------------'
-    - '&3-&d-&3-------------'
-    - '&3--&d-&3------------'
-    - '&3---&d-&3-----------'
-    - '&3----&d-&3----------'
-    - '&3-----&d-&3---------'
-    - '&3------&d-&3--------'
-    - '&3-------&d-&3-------'
-    - '&3--------&d-&3------'
-    - '&3---------&d-&3-----'
-    - '&3----------&d-&3----'
-    - '&3-----------&d-&3---'
-    - '&3------------&d-&3--'
-    - '&3-------------&d-&3-'
-    - '&3--------------&d-'
-    - '&3-------------&d-&3-'
-    - '&3------------&d-&3--'
-    - '&3-----------&d-&3---'
-    - '&3----------&d-&3----'
-    - '&3---------&d-&3-----'
-    - '&3--------&d-&3------'
-    - '&3-------&d-&3-------'
-    - '&3------&d-&3--------'
-    - '&3-----&d-&3---------'
-    - '&3----&d-&3----------'
-    - '&3---&d-&3-----------'
-    - '&3--&d-&3------------'
-    - '&3-&d-&3-------------'
-    - '&d-&3--------------'
-ServerName:
-  change-interval: 300
-  texts:
-  - '&c&lServerName'
-  - '&c&n&lServerName'
-  - '&b&lServerName'
-  - '&b&l&nServerName'
-  - '&e&lServerName'
-  - '&e&n&lServerName'
-web:
-  change-interval: 200
-  texts:
-  - '&ewww.domain.com'
-  - '&ewww.domain.com'
-  - '&ewww.domain.com'
-  - '&ewww.domain.com'
-  - '&ewww.domain.com'
-  - '&ewww.domain.com'
-  - '&6w&eww.domain.com'
-  - '&ew&6w&ew.domain.com'
-  - '&eww&6w&e.domain.com'
-  - '&ewww&6.&edomain.com'
-  - '&ewww.&6d&eomain.com'
-  - '&ewww.d&6o&emain.com'
-  - '&ewww.do&6m&eain.com'
-  - '&ewww.dom&6a&ein.com'
-  - '&ewww.doma&6i&en.com'
-  - '&ewww.domai&6n&e.com'
-  - '&ewww.domain&6.&ecom'
-  - '&ewww.domain.&6c&eom'
-  - '&ewww.domain.c&6o&em'
-  - '&ewww.domain.co&6m'
-  - '&ewww.domain.com'
-  - '&ewww.domain.com'
-  - '&ewww.domain.com'
-  - '&ewww.domain.com'
-  - '&ewww.domain.com'
-  - '&ewww.domain.com'
-vote:
-  change-interval: 1000
-  texts:
-  - '&avote.domain.com'
-  - '&a&nvote.domain.com'
-  - '&5vote.domain.com'
-  - '&5&nvote.domain.com'
-Welcome:
+Logo:
   change-interval: 400
   texts:
-  - '&7&lW_'
-  - '&7&lW_'
-  - '&7&lWe_'
-  - '&7&lWel_'
-  - '&7&lWelc_'
-  - '&7&lWelco_'
-  - '&7&lWelcom_'
-  - '&7&lWelcome_'
-  - '&7&lWelcome_'
-  - '&7&lWelcome_'
-  - '&7&lWelcome_'
-  - '&7&lWelcom_'
-  - '&7&lWelco_'
-  - '&7&lWelc_'
-  - '&7&lWel_'
-  - '&7&lWe_'
-  - '&7&lW_'
-  - '&7&lW_'
-time:
-  change-interval: 3000
-  texts:
-    - '&7Time &b%time%'
-    - '&7Date &b%date%'
-barcolors:
-  change-interval: 1000
-  texts:
-    - RED
-    - BLUE
-    - GREEN
-    - YELLOW
+  - ' '
+  - '&6&l_&8&l_'
+  - '&6&l_d&8&lD_'
+  - '&6&l_id&8&lDa_'
+  - '&6&l_oid&8&lDav_'
+  - '&6&l_noid&8&lDavi_'
+  - '&6&l_mnoid&8&lDavid_'
+  - '&6&l_amnoid&8&lDavid_'
+  - '&6&l_Gamnoid&8&lDavid_'
+  - '&6&lGamnoid&8&lDavid'
+  - '&e&lG&6&lamnoid&8&lDavid'
+  - '&6&lG&e&la&6&lmnoid&8&lDavid'
+  - '&6&lGa&e&lm&6&lnoid&8&lDavid'
+  - '&6&lGam&e&ln&6&loid&8&lDavid'
+  - '&6&lGamn&e&lo&6&lid&8&lDavid'
+  - '&6&lGamno&e&li&6&ld&8&lDavid'
+  - '&6&lGamnoi&e&ld&8&lDavid'
+  - '&6&lGamnoid&7&lD&8&lavid'
+  - '&6&lGamnoid&8&lD&7&la&8&lvid'
+  - '&6&lGamnoid&8&lDa&7&lv&8&lid'
+  - '&6&lGamnoid&8&lDav&7&li&8&ld'
+  - '&6&lGamnoid&8&lDavi&7&ld'
+  - '&6&lGamnoid&8&lDavid'
+  - '&6&l_Gamnoid&8&lDavid_'
+  - '&6&l_amnoid&8&lDavid_'
+  - '&6&l_mnoid&8&lDavid_'
+  - '&6&l_noid&8&lDavi_'
+  - '&6&l_oid&8&lDav_'
+  - '&6&l_id&8&lDa_'
+  - '&6&l_d&8&lD_'
+  - '&6&l_&8&l_'
