--- a/server/plugins/TAB/config.yml
+++ b/server/plugins/TAB/config.yml
@@ -11,7 +11,6 @@ header-footer:
   footer:
     - "%animation:time%"
     - "&2Ping: %ping%"
-    - "&7&l Used memory: %memory-used% MB / %memory-max% MB"
     - ""
     - "&7Visit our webpage %animation:web%"
     - "<#FFFFFF>&m                                                </#FFFF00>"
@@ -98,7 +97,7 @@ bossbar:
 
 # https://github.com/NEZNAMY/TAB/wiki/Feature-guide:-Scoreboard
 scoreboard:
-  enabled: false
+  enabled: true
   toggle-command: /sb
   remember-toggle-choice: false
   hidden-by-default: false
@@ -107,22 +106,6 @@ scoreboard:
   delay-on-join-milliseconds: 0
   respect-other-plugins: true
   scoreboards:
-    scoreboard-1.20.3+:
-      title: "<#E0B11E>MyServer</#FF0000>"
-      display-condition: "%player-version-id%>=765;%bedrock%=false" # Only display it to players using 1.20.3+ AND NOT bedrock edition
-      lines:
-        - "&7%date%"
-        - "%animation:MyAnimation1%"
-        - "&6Online:"
-        - "* &eOnline&7:||%online%"
-        - "* &eCurrent World&7:||%worldonline%"
-        - "* &eStaff&7:||%staffonline%"
-        - ""
-        - "&6Personal Info:"
-        - "* &bRank&7:||%group%"
-        - "* &bPing&7:||%ping%&8ms"
-        - "* &bWorld&7:||%world%"
-        - "%animation:MyAnimation1%"
     scoreboard:
       title: "<#E0B11E>MyServer</#FF0000>"
       lines:
